--- a/manual/emacspeak_002dwebspace.html
+++ b/manual/emacspeak_002dwebspace.html
@@ -117,12 +117,7 @@ Optional interactive prefix arg forces a refresh.
     <dt id="index-emacspeak_002dwebspace_002dheadlines">Command:
     <strong>emacspeak-webspace-headlines</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-; SPC h</kbd></dt>
-        <dd><span id="index-C_002d_003b-SPC-h"></span></dd>
-        <dt><kbd>C-x @ h SPC h</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-h-SPC-h"></span></dd>
-      </dl><span id=
+      <span id=
       "index-emacspeak_002dwebspace_002dheadlines-1"></span>
       <div class="format">
         <pre class=
@@ -139,12 +134,7 @@ Optional interactive prefix arg forces a refresh.
     Command:
     <strong>emacspeak-webspace-headlines-browse</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-; SPC SPC</kbd></dt>
-        <dd><span id="index-C_002d_003b-SPC-SPC"></span></dd>
-        <dt><kbd>C-x @ h SPC SPC</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-h-SPC-SPC"></span></dd>
-      </dl><span id=
+      <span id=
       "index-emacspeak_002dwebspace_002dheadlines_002dbrowse-1"></span>
       <div class="format">
         <pre class="format">Display buffer of browsable headlines.
@@ -275,14 +265,14 @@ during initialization.
   </dl><span id="emacspeak_002dwebspace-Options"></span>
   <h4 class="subsection">12.215.2 emacspeak-webspace Options</h4>
   <dl>
-    <dt id="index-User-Option-822">Variable: <strong>User
+    <dt id="index-User-Option-823">Variable: <strong>User
     Option</strong> <em>emacspeak-webspace-feeds</em></dt>
     <dd>
       <p>Feeds to use in Headline Ticker.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-823">Variable: <strong>User
+    <dt id="index-User-Option-824">Variable: <strong>User
     Option</strong> <em>emacspeak-webspace-kg-key</em></dt>
     <dd>
       <p>API Key for Google Knowledge Graph.</p>
