--- a/manual/emacspeak_002dwizards.html
+++ b/manual/emacspeak_002dwizards.html
@@ -3549,13 +3549,9 @@ during initialization.
     Command:
     <strong>emacspeak-wizards-web-clean-up-processes</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-; /</kbd></dt>
-        <dd><span id="index-C_002d_003b-_002f"></span></dd>
-        <dt><kbd>C-x @ h /</kbd></dt>
-        <dd><span id="index-C_002dx-_0040-h-_002f"></span></dd>
-      </dl><span id=
-      "index-emacspeak_002dwizards_002dweb_002dclean_002dup_002dprocesses-1"></span>
+      <span id=
+      "index-emacspeak_002dwizards_002dweb_002dclean_002dup_002dprocesses-1">
+      </span>
       <div class="format">
         <pre class="format">Delete stale Web connections.
 </pre>
@@ -3681,7 +3677,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
   </dl><span id="emacspeak_002dwizards-Options"></span>
   <h4 class="subsection">12.220.2 emacspeak-wizards Options</h4>
   <dl>
-    <dt id="index-User-Option-831">Variable: <strong>User
+    <dt id="index-User-Option-832">Variable: <strong>User
     Option</strong> <em>emacspeak-clipboard-file</em></dt>
     <dd>
       <p>File used to save Emacspeak clipboard. The emacspeak
@@ -3690,14 +3686,14 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-832">Variable: <strong>User
+    <dt id="index-User-Option-833">Variable: <strong>User
     Option</strong> <em>emacspeak-curl-cookie-store</em></dt>
     <dd>
       <p>Cookie store used by Curl.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-833">Variable: <strong>User
+    <dt id="index-User-Option-834">Variable: <strong>User
     Option</strong> <em>emacspeak-emergency-tts-server</em></dt>
     <dd>
       <p>TTS server to use in an emergency. Set this to a TTS
@@ -3710,7 +3706,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-834">Variable: <strong>User
+    <dt id="index-User-Option-835">Variable: <strong>User
     Option</strong> <em>emacspeak-iex-api-key</em></dt>
     <dd>
       <p>Web API key for IEX Finance access. See IEX Login Console
@@ -3719,7 +3715,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-835">Variable: <strong>User
+    <dt id="index-User-Option-836">Variable: <strong>User
     Option</strong>
     <em>emacspeak-speak-telephone-directory</em></dt>
     <dd>
@@ -3728,7 +3724,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-836">Variable: <strong>User
+    <dt id="index-User-Option-837">Variable: <strong>User
     Option</strong>
     <em>emacspeak-speak-telephone-directory-command</em></dt>
     <dd>
@@ -3737,14 +3733,14 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-837">Variable: <strong>User
+    <dt id="index-User-Option-838">Variable: <strong>User
     Option</strong> <em>emacspeak-ssh-tts-server</em></dt>
     <dd>
       <p>SSH TTS server to use by default.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-838">Variable: <strong>User
+    <dt id="index-User-Option-839">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-alpha-vantage-api-key</em></dt>
     <dd>
@@ -3754,7 +3750,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-839">Variable: <strong>User
+    <dt id="index-User-Option-840">Variable: <strong>User
     Option</strong> <em>emacspeak-wizards-dvi2txt-program</em></dt>
     <dd>
       <p>Program for converting dvi to txt. Set this to nil if you
@@ -3762,7 +3758,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-840">Variable: <strong>User
+    <dt id="index-User-Option-841">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-find-switches-that-need-quoting</em></dt>
     <dd>
@@ -3770,7 +3766,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-841">Variable: <strong>User
+    <dt id="index-User-Option-842">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-find-switches-widget</em></dt>
     <dd>
@@ -3778,7 +3774,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-842">Variable: <strong>User
+    <dt id="index-User-Option-843">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-iex-quotes-row-filter</em></dt>
     <dd>
@@ -3786,21 +3782,21 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-843">Variable: <strong>User
+    <dt id="index-User-Option-844">Variable: <strong>User
     Option</strong> <em>emacspeak-wizards-links-program</em></dt>
     <dd>
       <p>Name of links executable.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-844">Variable: <strong>User
+    <dt id="index-User-Option-845">Variable: <strong>User
     Option</strong> <em>emacspeak-wizards-lynx-program</em></dt>
     <dd>
       <p>Lynx executable.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-845">Variable: <strong>User
+    <dt id="index-User-Option-846">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-pdf-to-text-options</em></dt>
     <dd>
@@ -3808,7 +3804,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-846">Variable: <strong>User
+    <dt id="index-User-Option-847">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-pdf-to-text-program</em></dt>
     <dd>
@@ -3816,7 +3812,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-847">Variable: <strong>User
+    <dt id="index-User-Option-848">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-personal-portfolio</em></dt>
     <dd>
@@ -3827,7 +3823,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-848">Variable: <strong>User
+    <dt id="index-User-Option-849">Variable: <strong>User
     Option</strong> <em>emacspeak-wizards-ppthtml-program</em></dt>
     <dd>
       <p>Program for converting PPT to HTML. Set this to nil if you
@@ -3835,14 +3831,14 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-849">Variable: <strong>User
+    <dt id="index-User-Option-850">Variable: <strong>User
     Option</strong> <em>emacspeak-wizards-project-shells</em></dt>
     <dd>
       <p>List of shell-name/initial-directory pairs.</p>
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-850">Variable: <strong>User
+    <dt id="index-User-Option-851">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-spot-words-extension</em></dt>
     <dd>
@@ -3850,7 +3846,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-851">Variable: <strong>User
+    <dt id="index-User-Option-852">Variable: <strong>User
     Option</strong> <em>emacspeak-wizards-tramp-locations</em></dt>
     <dd>
       <p>Tramp locations used by Emacspeak tramp wizard. Locations
@@ -3860,7 +3856,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-852">Variable: <strong>User
+    <dt id="index-User-Option-853">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-vc-viewer-command</em></dt>
     <dd>
@@ -3871,7 +3867,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-853">Variable: <strong>User
+    <dt id="index-User-Option-854">Variable: <strong>User
     Option</strong> <em>emacspeak-wizards-xlhtml-program</em></dt>
     <dd>
       <p>Program for converting XL to HTML. Set this to nil if you
@@ -3879,7 +3875,7 @@ Optional interactive prefix arg ‘best’ picks best audio format.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-854">Variable: <strong>User
+    <dt id="index-User-Option-855">Variable: <strong>User
     Option</strong>
     <em>emacspeak-wizards-yql-quotes-row-filter</em></dt>
     <dd>
