--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -3310,6 +3310,14 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
+      "emacspeak_002dmuggles.html#index-C_002d_002f"><code>C-/</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dmuggles.html">emacspeak-muggles</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
       "emacspeak_002dm_002dplayer.html#index-C_002d_003b-_0027"><code>
       C-; '</code></a>:</td>
       <td>&nbsp;</td>
