--- a/manual/emacspeak_002dmuggles.html
+++ b/manual/emacspeak_002dmuggles.html
@@ -106,6 +106,8 @@
     <li>SmartParens: <kbd>C-c ,</kbd> Smart Parens</li>
     <li>Vuiet Explorer: <kbd>C-; v</kbd> Vuiet Music Explorer and
     Player</li>
+    <li>undo-only/undo-redo: <kbd>C-/</kbd> Undo-only on
+    <kbd>/</kbd> and undo-redo on <kbd>\</kbd></li>
   </ul>
   <p>Emacspeak automatically speaks Hydra hints when displayed. To
   silence all Hydra hints, set hydra-is-helpful to nil. To
@@ -654,8 +656,37 @@ The body can be accessed via ‘emacspeak-muggles-toggle-option/body’.
 </pre>
       </div>
     </dd>
-  </dl><span id="emacspeak_002dmuggles_002dview_002fbody"></span>
+  </dl><span id=
+  "emacspeak_002dmuggles_002dundo_002donly_002fundo_002dredo_002fbody"></span>
   <h4 class="subsubsection">12.130.3.15
+  emacspeak-muggles-undo-only/undo-redo/body</h4>
+  <dl>
+    <dt id=
+    "index-emacspeak_002dmuggles_002dundo_002donly_002fundo_002dredo_002fbody">
+    Command:
+    <strong>emacspeak-muggles-undo-only/undo-redo/body</strong></dt>
+    <dd>
+      <dl compact="compact">
+        <dt><kbd>C-/</kbd></dt>
+        <dd><span id="index-C_002d_002f"></span></dd>
+      </dl><span id=
+      "index-emacspeak_002dmuggles_002dundo_002donly_002fundo_002dredo_002fbody-1"></span>
+      <div class="format">
+        <pre class=
+        "format">Call the body in the "emacspeak-muggles-undo-only/undo-redo" hydra.
+
+The heads for the associated hydra are:
+
+"?":    ‘(emacspeak-hydra-self-help "emacspeak-muggles-undo-only/undo-redo")’,
+"/":    ‘undo-only’,
+"\":    ‘undo-redo’
+
+The body can be accessed via ‘emacspeak-muggles-undo-only/undo-redo/body’.
+</pre>
+      </div>
+    </dd>
+  </dl><span id="emacspeak_002dmuggles_002dview_002fbody"></span>
+  <h4 class="subsubsection">12.130.3.16
   emacspeak-muggles-view/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dview_002fbody">Command:
@@ -728,7 +759,7 @@ The body can be accessed via ‘emacspeak-muggles-view/body’.
       </div>
     </dd>
   </dl><span id="emacspeak_002dmuggles_002dvuiet_002fbody"></span>
-  <h4 class="subsubsection">12.130.3.16
+  <h4 class="subsubsection">12.130.3.17
   emacspeak-muggles-vuiet/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dvuiet_002fbody">
@@ -773,7 +804,7 @@ The body can be accessed via ‘emacspeak-muggles-vuiet/body’.
     </dd>
   </dl><span id=
   "emacspeak_002dmuggles_002dyank_002dpop_002fbody"></span>
-  <h4 class="subsubsection">12.130.3.17
+  <h4 class="subsubsection">12.130.3.18
   emacspeak-muggles-yank-pop/body</h4>
   <dl>
     <dt id="index-emacspeak_002dmuggles_002dyank_002dpop_002fbody">
@@ -800,7 +831,7 @@ The body can be accessed via ‘emacspeak-muggles-yank-pop/body’.
       </div>
     </dd>
   </dl><span id="emacspeak_002dorigami_002fbody"></span>
-  <h4 class="subsubsection">12.130.3.18 emacspeak-origami/body</h4>
+  <h4 class="subsubsection">12.130.3.19 emacspeak-origami/body</h4>
   <dl>
     <dt id="index-emacspeak_002dorigami_002fbody">Command:
     <strong>emacspeak-origami/body</strong></dt>
