--- a/manual/index.html
+++ b/manual/index.html
@@ -6068,18 +6068,26 @@
                   12.130.3.14
                   emacspeak-muggles-toggle-option/body</a></li>
                   <li><a id=
+                  "toc-emacspeak_002dmuggles_002dundo_002donly_002fundo_002dredo_002fbody"
+                  href=
+                  "emacspeak_002dmuggles.html#emacspeak_002dmuggles_002dundo_002donly_002fundo_002dredo_002fbody"
+                  name=
+                  "toc-emacspeak_002dmuggles_002dundo_002donly_002fundo_002dredo_002fbody">
+                  12.130.3.15
+                  emacspeak-muggles-undo-only/undo-redo/body</a></li>
+                  <li><a id=
                   "toc-emacspeak_002dmuggles_002dview_002fbody"
                   href=
                   "emacspeak_002dmuggles.html#emacspeak_002dmuggles_002dview_002fbody"
                   name=
-                  "toc-emacspeak_002dmuggles_002dview_002fbody">12.130.3.15
+                  "toc-emacspeak_002dmuggles_002dview_002fbody">12.130.3.16
                   emacspeak-muggles-view/body</a></li>
                   <li><a id=
                   "toc-emacspeak_002dmuggles_002dvuiet_002fbody"
                   href=
                   "emacspeak_002dmuggles.html#emacspeak_002dmuggles_002dvuiet_002fbody"
                   name=
-                  "toc-emacspeak_002dmuggles_002dvuiet_002fbody">12.130.3.16
+                  "toc-emacspeak_002dmuggles_002dvuiet_002fbody">12.130.3.17
                   emacspeak-muggles-vuiet/body</a></li>
                   <li><a id=
                   "toc-emacspeak_002dmuggles_002dyank_002dpop_002fbody"
@@ -6087,13 +6095,13 @@
                   "emacspeak_002dmuggles.html#emacspeak_002dmuggles_002dyank_002dpop_002fbody"
                   name=
                   "toc-emacspeak_002dmuggles_002dyank_002dpop_002fbody">
-                  12.130.3.17
+                  12.130.3.18
                   emacspeak-muggles-yank-pop/body</a></li>
                   <li><a id="toc-emacspeak_002dorigami_002fbody"
                   href=
                   "emacspeak_002dmuggles.html#emacspeak_002dorigami_002fbody"
                   name=
-                  "toc-emacspeak_002dorigami_002fbody">12.130.3.18
+                  "toc-emacspeak_002dorigami_002fbody">12.130.3.19
                   emacspeak-origami/body</a></li>
                 </ul>
               </li>
