--- a/manual/emacspeak_002dsounds.html
+++ b/manual/emacspeak_002dsounds.html
@@ -100,8 +100,7 @@
         <dd><span id="index-_003cfn_003e-_0028"></span></dd>
       </dl><span id="index-emacspeak_002daudio_002dsetup-1"></span>
       <div class="format">
-        <pre class=
-        "format">Call appropriate audio environment set command.
+        <pre class="format">Call amixer  command.
 
 (fn &amp;optional PREFIX)
 </pre>
