--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -648,10 +648,10 @@ voice annotated first,  see command ‘emacspeak-speak-voice-annotate-paragraphs
     <em>(&amp;optional filename)</em></dt>
     <dd>
       <dl compact="compact">
-        <dt><kbd>C-e f</kbd></dt>
-        <dd><span id="index-C_002de-f-1"></span></dd>
-        <dt><kbd>&lt;fn&gt; f</kbd></dt>
-        <dd><span id="index-_003cfn_003e-f"></span></dd>
+        <dt><kbd>C-e C-f</kbd></dt>
+        <dd><span id="index-C_002de-C_002df"></span></dd>
+        <dt><kbd>&lt;fn&gt; C-f</kbd></dt>
+        <dd><span id="index-_003cfn_003e-C_002df"></span></dd>
       </dl><span id=
       "index-emacspeak_002dspeak_002dbuffer_002dfilename-2"></span>
       <div class="format">
@@ -799,7 +799,12 @@ was spoken.  Any other key continues to speak the buffer.
     <dt id="index-emacspeak_002dspeak_002dcurrent_002dfield">
     Command: <strong>emacspeak-speak-current-field</strong></dt>
     <dd>
-      <span id=
+      <dl compact="compact">
+        <dt><kbd>C-e .</kbd></dt>
+        <dd><span id="index-C_002de-_002e"></span></dd>
+        <dt><kbd>&lt;fn&gt; .</kbd></dt>
+        <dd><span id="index-_003cfn_003e-_002e"></span></dd>
+      </dl><span id=
       "index-emacspeak_002dspeak_002dcurrent_002dfield-1"></span>
       <div class="format">
         <pre class="format">Speak current field.
