--- a/manual/Key-Index.html
+++ b/manual/Key-Index.html
@@ -329,11 +329,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "dtk_002dspeak.html#index-_003cfn_003e-_002e"><code>&lt;fn&gt;
+      "emacspeak_002dspeak.html#index-_003cfn_003e-_002e"><code>&lt;fn&gt;
       .</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "dtk_002dspeak.html">dtk-speak</a></td>
+      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
     </tr>
     <tr>
       <td></td>
@@ -691,6 +691,15 @@
       <td valign="top"><a href=
       "emacspeak_002dspeak.html#index-_003cfn_003e-C_002dd"><code>&lt;fn&gt;
       C-d</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dspeak.html#index-_003cfn_003e-C_002df"><code>&lt;fn&gt;
+      C-f</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dspeak.html">emacspeak-speak</a></td>
@@ -1601,15 +1610,6 @@
       DEL</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href="cd_002dtool.html">cd-tool</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-_003cfn_003e-f"><code>&lt;fn&gt;
-      f</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
     </tr>
     <tr>
       <td></td>
@@ -3785,11 +3785,11 @@
     <tr>
       <td></td>
       <td valign="top"><a href=
-      "dtk_002dspeak.html#index-C_002de-_002e"><code>C-e
+      "emacspeak_002dspeak.html#index-C_002de-_002e"><code>C-e
       .</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
-      "dtk_002dspeak.html">dtk-speak</a></td>
+      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
     </tr>
     <tr>
       <td></td>
@@ -4196,6 +4196,15 @@
       <td valign="top"><a href=
       "emacspeak_002dspeak.html#index-C_002de-C_002dd"><code>C-e
       C-d</code></a>:</td>
+      <td>&nbsp;</td>
+      <td valign="top"><a href=
+      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td valign="top"><a href=
+      "emacspeak_002dspeak.html#index-C_002de-C_002df"><code>C-e
+      C-f</code></a>:</td>
       <td>&nbsp;</td>
       <td valign="top"><a href=
       "emacspeak_002dspeak.html">emacspeak-speak</a></td>
@@ -5363,15 +5372,6 @@
       <td>&nbsp;</td>
       <td valign="top"><a href="Status-Information.html">Status
       Information</a></td>
-    </tr>
-    <tr>
-      <td></td>
-      <td valign="top"><a href=
-      "emacspeak_002dspeak.html#index-C_002de-f-1"><code>C-e
-      f</code></a>:</td>
-      <td>&nbsp;</td>
-      <td valign="top"><a href=
-      "emacspeak_002dspeak.html">emacspeak-speak</a></td>
     </tr>
     <tr>
       <td></td>
