--- a/manual/dtk_002dspeak.html
+++ b/manual/dtk_002dspeak.html
@@ -190,12 +190,7 @@ program. Port defaults to dtk-local-server-port
     <dt id="index-dtk_002dnotify_002dstop">Command:
     <strong>dtk-notify-stop</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-e .</kbd></dt>
-        <dd><span id="index-C_002de-_002e"></span></dd>
-        <dt><kbd>&lt;fn&gt; .</kbd></dt>
-        <dd><span id="index-_003cfn_003e-_002e"></span></dd>
-      </dl><span id="index-dtk_002dnotify_002dstop-1"></span>
+      <span id="index-dtk_002dnotify_002dstop-1"></span>
       <div class="format">
         <pre class="format">Stop  speech on notification stream.
 </pre>
