--- a/manual/espeak_002dvoices.html
+++ b/manual/espeak_002dvoices.html
@@ -23,7 +23,7 @@
   "Table of Contents" />
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
-  <link href="g.html" rel="next" title="g" />
+  <link href="g_002dutils.html" rel="next" title="g-utils" />
   <link href="emacspeak_002dytel.html" rel="prev" title=
   "emacspeak-ytel" />
   <style type="text/css">
@@ -52,9 +52,9 @@
 <body lang="en" xml:lang="en">
   <span id="espeak_002dvoices"></span>
   <div class="header">
-    <p>Next: <a href="g.html" accesskey="n" rel="next">g</a>,
-    Previous: <a href="emacspeak_002dytel.html" accesskey="p" rel=
-    "prev">emacspeak-ytel</a>, Up: <a href=
+    <p>Next: <a href="g_002dutils.html" accesskey="n" rel=
+    "next">g-utils</a>, Previous: <a href="emacspeak_002dytel.html"
+    accesskey="p" rel="prev">emacspeak-ytel</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
@@ -87,7 +87,7 @@
   </dl><span id="espeak_002dvoices-Options"></span>
   <h4 class="subsection">12.228.2 espeak-voices Options</h4>
   <dl>
-    <dt id="index-User-Option-868">Variable: <strong>User
+    <dt id="index-User-Option-867">Variable: <strong>User
     Option</strong> <em>espeak-default-speech-rate</em></dt>
     <dd>
       <p>Default speech rate for eSpeak.</p>
