--- a/manual/emacspeak_002dxkcd.html
+++ b/manual/emacspeak_002dxkcd.html
@@ -23,8 +23,8 @@
   "Table of Contents" />
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
-  <link href="emacspeak_002dxml_002dshell.html" rel="next" title=
-  "emacspeak-xml-shell" />
+  <link href="emacspeak_002dxref.html" rel="next" title=
+  "emacspeak-xref" />
   <link href="emacspeak_002dwoman.html" rel="prev" title=
   "emacspeak-woman" />
   <style type="text/css">
@@ -53,8 +53,8 @@
 <body lang="en" xml:lang="en">
   <span id="emacspeak_002dxkcd"></span>
   <div class="header">
-    <p>Next: <a href="emacspeak_002dxml_002dshell.html" accesskey=
-    "n" rel="next">emacspeak-xml-shell</a>, Previous: <a href=
+    <p>Next: <a href="emacspeak_002dxref.html" accesskey="n" rel=
+    "next">emacspeak-xref</a>, Previous: <a href=
     "emacspeak_002dwoman.html" accesskey="p" rel=
     "prev">emacspeak-woman</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
