--- a/manual/emacspeak_002dxref.html
+++ b/manual/emacspeak_002dxref.html
@@ -25,8 +25,8 @@
   "Emacspeak Commands And Options" />
   <link href="emacspeak_002dxslt.html" rel="next" title=
   "emacspeak-xslt" />
-  <link href="emacspeak_002dxml_002dshell.html" rel="prev" title=
-  "emacspeak-xml-shell" />
+  <link href="emacspeak_002dxkcd.html" rel="prev" title=
+  "emacspeak-xkcd" />
   <style type="text/css">
   /*<![CDATA[*/
   <!--
@@ -55,8 +55,8 @@
   <div class="header">
     <p>Next: <a href="emacspeak_002dxslt.html" accesskey="n" rel=
     "next">emacspeak-xslt</a>, Previous: <a href=
-    "emacspeak_002dxml_002dshell.html" accesskey="p" rel=
-    "prev">emacspeak-xml-shell</a>, Up: <a href=
+    "emacspeak_002dxkcd.html" accesskey="p" rel=
+    "prev">emacspeak-xkcd</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
@@ -65,7 +65,7 @@
   </div>
   <hr />
   <span id="emacspeak_002dxref-1"></span>
-  <h3 class="section">12.223 emacspeak-xref</h3>
+  <h3 class="section">12.222 emacspeak-xref</h3>
   <p>XREF == Cross-references in source code. This is part of Emacs
   25. This module speech-enables xref</p>
 </body>
