--- a/manual/emacspeak_002dsounds.html
+++ b/manual/emacspeak_002dsounds.html
@@ -116,12 +116,7 @@
     Command: <strong>emacspeak-set-auditory-icon-player</strong>
     <em>(player)</em></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>C-e M-a</kbd></dt>
-        <dd><span id="index-C_002de-M_002da"></span></dd>
-        <dt><kbd>&lt;fn&gt; M-a</kbd></dt>
-        <dd><span id="index-_003cfn_003e-M_002da"></span></dd>
-      </dl><span id=
+      <span id=
       "index-emacspeak_002dset_002dauditory_002dicon_002dplayer-1"></span>
       <div class="format">
         <pre class=
