--- a/manual/emacspeak_002dview.html
+++ b/manual/emacspeak_002dview.html
@@ -23,8 +23,8 @@
   "Table of Contents" />
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
-  <link href="emacspeak_002dvlc.html" rel="next" title=
-  "emacspeak-vlc" />
+  <link href="emacspeak_002dvm.html" rel="next" title=
+  "emacspeak-vm" />
   <link href="emacspeak_002dvdiff.html" rel="prev" title=
   "emacspeak-vdiff" />
   <style type="text/css">
@@ -53,8 +53,8 @@
 <body lang="en" xml:lang="en">
   <span id="emacspeak_002dview"></span>
   <div class="header">
-    <p>Next: <a href="emacspeak_002dvlc.html" accesskey="n" rel=
-    "next">emacspeak-vlc</a>, Previous: <a href=
+    <p>Next: <a href="emacspeak_002dvm.html" accesskey="n" rel=
+    "next">emacspeak-vm</a>, Previous: <a href=
     "emacspeak_002dvdiff.html" accesskey="p" rel=
     "prev">emacspeak-vdiff</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
