--- a/manual/toy_002dbraille.html
+++ b/manual/toy_002dbraille.html
@@ -23,7 +23,8 @@
   "Table of Contents" />
   <link href="Emacspeak-Commands-And-Options.html" rel="up" title=
   "Emacspeak Commands And Options" />
-  <link href="tts.html" rel="next" title="tts" />
+  <link href="voice_002dsetup.html" rel="next" title=
+  "voice-setup" />
   <link href="tetris.html" rel="prev" title="tetris" />
   <style type="text/css">
   /*<![CDATA[*/
@@ -51,9 +52,9 @@
 <body lang="en" xml:lang="en">
   <span id="toy_002dbraille"></span>
   <div class="header">
-    <p>Next: <a href="tts.html" accesskey="n" rel="next">tts</a>,
-    Previous: <a href="tetris.html" accesskey="p" rel=
-    "prev">tetris</a>, Up: <a href=
+    <p>Next: <a href="voice_002dsetup.html" accesskey="n" rel=
+    "next">voice-setup</a>, Previous: <a href="tetris.html"
+    accesskey="p" rel="prev">tetris</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
@@ -62,7 +63,7 @@
   </div>
   <hr />
   <span id="toy_002dbraille-1"></span>
-  <h3 class="section">12.239 toy-braille</h3>
+  <h3 class="section">12.238 toy-braille</h3>
   <p>This is a bit of toy code to write in braille. To try this,
   load this file (‘M-x load-file path/to/toy-braille.el’), then
   do:</p>
