--- a/manual/emacspeak_002dvm.html
+++ b/manual/emacspeak_002dvm.html
@@ -25,8 +25,8 @@
   "Emacspeak Commands And Options" />
   <link href="emacspeak_002dvuiet.html" rel="next" title=
   "emacspeak-vuiet" />
-  <link href="emacspeak_002dvlc.html" rel="prev" title=
-  "emacspeak-vlc" />
+  <link href="emacspeak_002dview.html" rel="prev" title=
+  "emacspeak-view" />
   <style type="text/css">
   /*<![CDATA[*/
   <!--
@@ -55,8 +55,8 @@
   <div class="header">
     <p>Next: <a href="emacspeak_002dvuiet.html" accesskey="n" rel=
     "next">emacspeak-vuiet</a>, Previous: <a href=
-    "emacspeak_002dvlc.html" accesskey="p" rel=
-    "prev">emacspeak-vlc</a>, Up: <a href=
+    "emacspeak_002dview.html" accesskey="p" rel=
+    "prev">emacspeak-view</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
@@ -65,14 +65,14 @@
   </div>
   <hr />
   <span id="emacspeak_002dvm-1"></span>
-  <h3 class="section">12.209 emacspeak-vm</h3>
+  <h3 class="section">12.208 emacspeak-vm</h3>
   <p>This module extends the mail reader vm. Uses voice locking for
   message headers and cited messages</p><span id=
   "Emacspeak_002dVm-Commands"></span>
-  <h4 class="subsection">12.209.1 Emacspeak-Vm
+  <h4 class="subsection">12.208.1 Emacspeak-Vm
   Commands</h4><span id=
   "emacspeak_002dvm_002dbrowse_002dmessage"></span>
-  <h4 class="subsubsection">12.209.1.1
+  <h4 class="subsubsection">12.208.1.1
   emacspeak-vm-browse-message</h4>
   <dl>
     <dt id="index-emacspeak_002dvm_002dbrowse_002dmessage">Command:
@@ -88,7 +88,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dvm_002dcatch_002dup_002dall_002dmessages"></span>
-  <h4 class="subsubsection">12.209.1.2
+  <h4 class="subsubsection">12.208.1.2
   emacspeak-vm-catch-up-all-messages</h4>
   <dl>
     <dt id=
@@ -107,7 +107,7 @@
     </dd>
   </dl><span id=
   "emacspeak_002dvm_002dlocate_002dsubject_002dline"></span>
-  <h4 class="subsubsection">12.209.1.3
+  <h4 class="subsubsection">12.208.1.3
   emacspeak-vm-locate-subject-line</h4>
   <dl>
     <dt id=
@@ -125,7 +125,7 @@ that has been forwarded multiple times.
       </div>
     </dd>
   </dl><span id="emacspeak_002dvm_002dmode_002dline"></span>
-  <h4 class="subsubsection">12.209.1.4 emacspeak-vm-mode-line</h4>
+  <h4 class="subsubsection">12.208.1.4 emacspeak-vm-mode-line</h4>
   <dl>
     <dt id="index-emacspeak_002dvm_002dmode_002dline">Command:
     <strong>emacspeak-vm-mode-line</strong></dt>
@@ -137,7 +137,7 @@ that has been forwarded multiple times.
       </div>
     </dd>
   </dl><span id="emacspeak_002dvm_002dspeak_002dlabels"></span>
-  <h4 class="subsubsection">12.209.1.5
+  <h4 class="subsubsection">12.208.1.5
   emacspeak-vm-speak-labels</h4>
   <dl>
     <dt id="index-emacspeak_002dvm_002dspeak_002dlabels">Command:
@@ -151,7 +151,7 @@ that has been forwarded multiple times.
       </div>
     </dd>
   </dl><span id="emacspeak_002dvm_002dspeak_002dmessage"></span>
-  <h4 class="subsubsection">12.209.1.6
+  <h4 class="subsubsection">12.208.1.6
   emacspeak-vm-speak-message</h4>
   <dl>
     <dt id="index-emacspeak_002dvm_002dspeak_002dmessage">Command:
@@ -166,7 +166,7 @@ that has been forwarded multiple times.
     </dd>
   </dl><span id=
   "emacspeak_002dvm_002dtoggle_002dhtml_002dmime_002ddemotion"></span>
-  <h4 class="subsubsection">12.209.1.7
+  <h4 class="subsubsection">12.208.1.7
   emacspeak-vm-toggle-html-mime-demotion</h4>
   <dl>
     <dt id=
@@ -184,7 +184,7 @@ that has been forwarded multiple times.
       </div>
     </dd>
   </dl><span id="emacspeak_002dvm_002dyank_002dheader"></span>
-  <h4 class="subsubsection">12.209.1.8
+  <h4 class="subsubsection">12.208.1.8
   emacspeak-vm-yank-header</h4>
   <dl>
     <dt id="index-emacspeak_002dvm_002dyank_002dheader">Command:
@@ -198,9 +198,9 @@ that has been forwarded multiple times.
       </div>
     </dd>
   </dl><span id="emacspeak_002dvm-Options"></span>
-  <h4 class="subsection">12.209.2 emacspeak-vm Options</h4>
+  <h4 class="subsection">12.208.2 emacspeak-vm Options</h4>
   <dl>
-    <dt id="index-User-Option-808">Variable: <strong>User
+    <dt id="index-User-Option-806">Variable: <strong>User
     Option</strong> <em>emacspeak-vm-cal2text</em></dt>
     <dd>
       <p>Executable that converts calendar invitations on standard
@@ -208,7 +208,7 @@ that has been forwarded multiple times.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-809">Variable: <strong>User
+    <dt id="index-User-Option-807">Variable: <strong>User
     Option</strong>
     <em>emacspeak-vm-customize-mime-settings</em></dt>
     <dd>
@@ -217,7 +217,7 @@ that has been forwarded multiple times.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-810">Variable: <strong>User
+    <dt id="index-User-Option-808">Variable: <strong>User
     Option</strong> <em>emacspeak-vm-doc2text</em></dt>
     <dd>
       <p>Executable that converts MSWord documents on standard
@@ -225,7 +225,7 @@ that has been forwarded multiple times.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-811">Variable: <strong>User
+    <dt id="index-User-Option-809">Variable: <strong>User
     Option</strong> <em>emacspeak-vm-headers-strip-octals</em></dt>
     <dd>
       <p>Specify whether non-ascii chars should be stripped when
@@ -233,7 +233,7 @@ that has been forwarded multiple times.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-812">Variable: <strong>User
+    <dt id="index-User-Option-810">Variable: <strong>User
     Option</strong> <em>emacspeak-vm-pdf2text</em></dt>
     <dd>
       <p>Executable that converts PDF on standard input to plain
@@ -241,7 +241,7 @@ that has been forwarded multiple times.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-813">Variable: <strong>User
+    <dt id="index-User-Option-811">Variable: <strong>User
     Option</strong> <em>emacspeak-vm-ppt2html</em></dt>
     <dd>
       <p>Executable that converts MSPPT documents on standard input
@@ -249,7 +249,7 @@ that has been forwarded multiple times.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-814">Variable: <strong>User
+    <dt id="index-User-Option-812">Variable: <strong>User
     Option</strong> <em>emacspeak-vm-use-raman-settings</em></dt>
     <dd>
       <p>Should VM use the customizations used by the author of
@@ -257,7 +257,7 @@ that has been forwarded multiple times.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-815">Variable: <strong>User
+    <dt id="index-User-Option-813">Variable: <strong>User
     Option</strong> <em>emacspeak-vm-voice-loc</em></dt>
     <dd>
       <p>Set this to T if you want messages automatically voice
@@ -266,7 +266,7 @@ that has been forwarded multiple times.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-816">Variable: <strong>User
+    <dt id="index-User-Option-814">Variable: <strong>User
     Option</strong> <em>emacspeak-vm-xls2html</em></dt>
     <dd>
       <p>Executable that converts MSXL documents on standard input
@@ -277,8 +277,8 @@ that has been forwarded multiple times.
   <div class="header">
     <p>Next: <a href="emacspeak_002dvuiet.html" accesskey="n" rel=
     "next">emacspeak-vuiet</a>, Previous: <a href=
-    "emacspeak_002dvlc.html" accesskey="p" rel=
-    "prev">emacspeak-vlc</a>, Up: <a href=
+    "emacspeak_002dview.html" accesskey="p" rel=
+    "prev">emacspeak-view</a>, Up: <a href=
     "Emacspeak-Commands-And-Options.html" accesskey="u" rel=
     "up">Emacspeak Commands And Options</a> &nbsp; [<a href=
     "index.html#SEC_Contents" title="Table of contents" rel=
